# rag-system

./: .env.example  .gitignore  AGENTS.md  IMPROVEMENT_PLAN.md  PYTHON_TUTORIAL.md  README.md  app.py  build_tutorial_html.py  chunk.py  chunking-experiments.md  compare_retrieval.py  corpus-notes.md  docker-compose.yml  embed.py  eval_set.jsonl  gen_eval.py  grade.html  ingest.py  metrics.py  metrics_log.jsonl  ocr_pdfs.py  pyproject.toml  python_tutorial.html  rag.py
.deepeval/: .deepeval_telemetry.txt
.github/workflows/: ci.yml  eval-regression.yml
db/: init.sql  migrate.py
db/migrations/: 0001_initial_schema.sql  0002_hype_chunk_questions.sql  0003_candidate_eval_questions.sql  0004_agent_threads_and_qa_memory.sql  0005_qa_store_to_qa_memory.sql  0006_drop_langgraph_tables.sql
evals/: DESIGN.md  README.md  api.py  baseline_metrics.json  check_regression.py  compare_retrieval.py  deepeval_run.py  eval_set.jsonl  gen_eval.py  grade.py  langfuse_viewer.py  metrics.py  run.py  schema.py  test_assertions.py  trace_viewer.py
evals/1_search_system/: gen_questions.py
evals/answer/: deepeval_run.py  eval_answers.py  gen_eval.py  judge.py  judge_db.py  judge_vs_human.py  rubrics.md
evals/answer/analysis/: failure-taxonomy.md  judge_validation_splits.md
evals/answer/data/: answer_feedback.jsonl  rag_system_human_eval.jsonl
evals/answer_system/: answer_feedback.jsonl  eval_answers.py  failure-taxonomy.md  grade_answers.html  grade_answers.py  judge.py  judge_db.py  judge_metrics.json  judge_metrics_v2.json  judge_metrics_v2_dev.json  judge_metrics_v2_test.json  judge_validation_v2.md  judge_vs_human.py  judgments.jsonl  rubrics.md
evals/answer_system/trace_labelling/: .gitignore  .labels_state.json  build_labelling_seed.py  label_answers.py  rag_eval_entry.py  targeting_seed.jsonl  trace_dataset  trace_dataset_v2
evals/configs/: baseline.json  hype.json  multi_query.json  prose.json  vector.json
evals/deepeval/: run.py
evals/flywheel/: sample_traces.py
evals/inspect-ai/: NOTES.md  task.py
evals/notes/: failure-analysis.md
evals/search/: compare_retrieval.py  gen_questions.py  metrics.py  show_questions.py
evals/search_system/: gen_questions.py  show_questions.py  synthetic_questions.jsonl
evals/viewers/: grade.py  grade_answers.py  langfuse_viewer.py  trace_viewer.py
evals/viewers/labelling/: build_labelling_seed.py  label_answers.py  labelling_seed.jsonl  rag_eval_entry.py
evals/web_search/: eval_set.jsonl  judge.py  run_baseline.py  tuning-log.md
evals/web_search/analysis/: baseline_metrics.json  metrics_crit_off.json  metrics_crit_on.json  (+3 more)
frontend/: .gitignore  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/lib/: sse.ts  types.ts
rag/: __init__.py  app.py  clients.py  config.py  config.toml  db.py  guardrails.py  ocr.py  pipeline.py  test_agent_run.py  test_agent_stream.py
rag/indexing/: chunk.py  embed.py  index.py  ingest.py
rag/query/: agent.py  answer.py  deepagent.py  gate.py  memory.py  retrieve.py  search_agent.py  sources.py  tools.py  web_search_agent.py  web_search_graph_agent.py
rag/rails/: config.yml  prompts.yml
(+25 files in other folders)
