[project]
name = "rag-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ai-utils",
    "anthropic>=0.109.1",
    "beautifulsoup4>=4.15.0",
    "ebooklib>=0.20",
    "fastapi[standard]>=0.136.3",
    "pgvector>=0.4.2",
    "psycopg[binary]>=3.3.4",
    "pypdf>=6.13.1",
    "python-dotenv>=1.2.2",
    "striprtf>=0.0.32",
    "tiktoken>=0.13.0",
    "voyageai>=0.4.0",
]

[tool.uv.sources]
ai-utils = { git = "https://github.com/hachai-code/ai-utils" }
