[project]
name = "rag-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ai-utils",
    "anthropic>=0.109.1",
    "beautifulsoup4>=4.15.0",
    "ebooklib>=0.20",
    "fastapi[standard]>=0.136.3",
    "pgvector>=0.4.2",
    "psycopg[binary]>=3.3.4",
    "pypdf>=6.13.1",
    "slowapi>=0.1.9",
    "python-dotenv>=1.2.2",
    "striprtf>=0.0.32",
    "tiktoken>=0.13.0",
    "voyageai>=0.4.0",
    "langfuse>=4.9.0",
    "opentelemetry-instrumentation-anthropic>=0.61.0",
    "instructor>=1.15.3",
    "openai>=2.43.0",
    "pymupdf>=1.27.2.3",
    "deepeval>=4.0.7",
    "trafilatura>=2.1.0",
    "langgraph>=1.2",
    "deepagents",
    "langchain-deepseek",
]

[dependency-groups]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["evals"]

[tool.uv.sources]
ai-utils = { git = "https://github.com/hachai-code/ai-utils" }
