[project]
name = "rag-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ai-utils",
    "anthropic>=0.109.1",
    "beautifulsoup4>=4.15.0",
    "ebooklib>=0.20",
    "fastapi[standard]>=0.136.3",
    "pgvector>=0.4.2",
    "psycopg[binary]>=3.3.4",
    "pypdf>=6.13.1",
    "slowapi>=0.1.9",
    "python-dotenv>=1.2.2",
    "striprtf>=0.0.32",
    "tiktoken>=0.13.0",
    "voyageai>=0.4.0",
    "langfuse>=4.9.0",
    "opentelemetry-instrumentation-anthropic>=0.61.0",
    "instructor>=1.15.3",
    "openai>=2.45.0",
    "pymupdf>=1.27.2.3",
    "deepeval>=4.0.7",
    "trafilatura>=2.1.0",
    "langchain-deepseek",
    "nemoguardrails>=0.23.0",
    "opentelemetry-instrumentation-fastapi>=0.64b0",
    "pydantic-ai>=0.8.1",
]

[dependency-groups]
dev = [
    "inspect-ai>=0.3.246",
    "pytest>=8",
    "ruff>=0.15",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# pydantic-ai's E subset (E4/E7/E9, no E501: long prompt strings don't reflow) + bugbear.
select = ["E4", "E7", "E9", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# load_dotenv() must run before rag imports.
"rag/__init__.py" = ["E402"]
"evals/web_search/judge.py" = ["E402"]
"evals/web_search/run_baseline.py" = ["E402"]
# One-off tkinter labelling GUIs: star imports are idiomatic there.
"evals/viewers/labelling/*.py" = ["F403", "F405", "E741"]

[tool.pytest.ini_options]
testpaths = ["evals"]

[tool.uv.sources]
ai-utils = { git = "https://github.com/hachai-code/ai-utils" }
